--- a/ReportsGenerator/Properties/Settings.settings
+++ b/ReportsGenerator/Properties/Settings.settings
@@ -20,5 +20,14 @@
     <Setting Name="Order" Type="System.String" Scope="User">
       <Value Profile="(Default)">TestOrder</Value>
     </Setting>
+    <Setting Name="Size" Type="System.Drawing.Size" Scope="User">
+      <Value Profile="(Default)">0, 0</Value>
+    </Setting>
+    <Setting Name="Location" Type="System.Drawing.Point" Scope="User">
+      <Value Profile="(Default)">0, 0</Value>
+    </Setting>
+    <Setting Name="HasSetDefaults" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
