--- a/ReportsGenerator/ReportsGenerator.csproj
+++ b/ReportsGenerator/ReportsGenerator.csproj
@@ -13,6 +13,10 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Assets\Icon.ico" />
+    <None Remove="materials.csv" />
+    <Content Include="materials.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="DocumentFormat.OpenXml" Version="2.15.0" />
